--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,18 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+   adapter: mysql2
+   database: spree_commerce
+   username: root
+   password: root
+   host: localhost
+
+production:
+   adapter: mysql2
+   database: spree_commerce
+   username: root
+   password: root
+   host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,6 +30,3 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
